remove not needed static test methods