@@ -2,7 +2,6 @@ package com.example.openmapvalidator.service.convert;
 
 import com.example.openmapvalidator.helper.ConfigurationService;
 import com.example.openmapvalidator.helper.Const;
-import com.example.openmapvalidator.service.database.PostgreSQLSelect;
 import com.example.openmapvalidator.service.file.FileHandler;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -10,6 +9,8 @@ import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Repository;
 
 import java.io.*;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
  * @author Sanan.Ahmadzada
@@ -37,45 +38,33 @@ public class OsmToDBHandlerImpl implements OsmToDBHandler {
         String root = new File(System.getProperty("user.dir")).getAbsolutePath();
         ClassPathResource mapFolderResource = new ClassPathResource(Const.MAP_FOLDER_ROOT);
 
+        List<String> windowsCommandPathList = new ArrayList<>(1);
+
         try {
 
             String fileNameWithPath = mapFolderResource.getFile().getAbsolutePath() +
                     File.separator + fileName;
 
-            String stylePath = mapFolderResource.getFile().getAbsolutePath() +
-                    File.separator + Const.OSM_STYLE;
-
-
             if (isWindows) {
                 OSM_ROOT = Const.OSM_COMMAND_WINDOWS_ROOT;
                 String path = root + OSM_ROOT;
-                String command = path + File.separator + Const.OSM_COMMAND;
+                String commandPathWithName = path + File.separator + Const.OSM_COMMAND;
 
-                StringBuilder sb = new StringBuilder()
-                        .append(command)
-                        .append(Const.SPACE)
-                        .append(Const.OSM_COMMAND_CREATE_OPTION)
-                        .append(Const.SPACE)
-                        .append(Const.OSM_COMMAND_DATABASE_OPTION)
-                        .append(Const.SPACE)
-                        .append(configurationService.getOSM_COMMAND_DATABASE_ARGUMENT())
-                        .append(Const.SPACE)
-                        .append(Const.OSM_COMMAND_USERNAME_OPTION)
-                        .append(Const.SPACE)
-                        .append(configurationService.getPSQL_USERNAME())
-                        .append(Const.SPACE)
-                        .append(Const.OSM_DEFAULT_STYLE_OPTION)
-                        .append(Const.SPACE)
-                        .append(stylePath)
-                        .append(Const.SPACE)
-                        .append(fileNameWithPath)
-                        .append(Const.SHELL_EXIT_COMMAND);
+                List<String> commandList = getCommandsForOsm2pgsql(commandPathWithName, fileNameWithPath);
 
-                LOGGER.info("command: {}", sb.toString());
+                StringBuilder sb = new StringBuilder();
+                for (String commandOfOsm : commandList) {
+                    sb.append(commandOfOsm)
+                            .append(Const.SPACE);
+                }
+                sb.append(Const.SHELL_EXIT_COMMAND);
+
+                LOGGER.info("command: {}", commandList);
 
                 fileHandler.openFileAndOverrideContent(root + Const.OSM_BAT_FILE_PATH_WITH_NAME, sb.toString());
 
-                executeCommandWithExec(root + Const.OSM_BAT_FILE_PATH, true);
+                windowsCommandPathList.add(root + Const.OSM_BAT_FILE_PATH);
+                executeCommandWithExec(windowsCommandPathList, true);
 
             } else {
 
@@ -83,29 +72,13 @@ public class OsmToDBHandlerImpl implements OsmToDBHandler {
 
                 String path = root + OSM_ROOT;
 
-                String command = path + File.separator + Const.OSM_COMMAND;
+                String commandPathWithName = path + File.separator + Const.OSM_COMMAND;
 
-                StringBuilder sb = new StringBuilder()
-                        .append(command)
-                        .append(Const.SPACE)
-                        .append(Const.OSM_COMMAND_CREATE_OPTION)
-                        .append(Const.SPACE)
-                        .append(Const.OSM_COMMAND_DATABASE_OPTION)
-                        .append(Const.SPACE)
-                        .append(configurationService.getOSM_COMMAND_DATABASE_ARGUMENT())
-                        .append(Const.SPACE)
-                        .append(Const.OSM_DEFAULT_STYLE_OPTION)
-                        .append(Const.SPACE)
-                        .append(stylePath)
-                        .append(Const.SPACE)
-                        .append(fileNameWithPath)
-                        .append(Const.SHELL_EXIT_COMMAND);
+                List<String> commandList = getCommandsForOsm2pgsql(commandPathWithName, fileNameWithPath);
 
-                LOGGER.info("command: {}", sb.toString());
+                LOGGER.info("command: {}", commandList);
 
-                fileHandler.openFileAndOverrideContent(root + Const.OSM_SH_FILE_PATH_WITH_NAME, sb.toString());
-
-                executeCommandWithExec(root + Const.OSM_SH_FILE_PATH, false);
+                executeCommandWithExec(commandList, false);
 
             }
 
@@ -118,46 +91,42 @@ public class OsmToDBHandlerImpl implements OsmToDBHandler {
         }
     }
 
-    public static void main(String[] args) throws IOException {
-        File myFoo = new File("C:\\dev\\projects\\validator-openstreetmap\\bashscript\\windows\\osm2pgsql-bin\\osm.bat");
-        FileWriter fooWriter = new FileWriter(myFoo, false); // true to append
-        // false to overwrite.
-        String content = "C:\\dev\\projects\\validator-openstreetmap\\bashscript\\windows\\osm2pgsql-bin\\osm2pgsql " +
-                "--create --database map-db --username postgres -S " +
-                "C:\\dev\\projects\\validator-openstreetmap\\target\\classes\\map\\default.style " +
-                "C:\\dev\\projects\\validator-openstreetmap\\target\\classes\\map\\map.osm & exit";
-        fooWriter.write(content);
-        fooWriter.close();
+    /**
+     *
+     * @return list of commands to run osm2pgsql command for unix and windows system
+     */
+    private List<String> getCommandsForOsm2pgsql(String command, String fileNameWithPath) {
 
-        executeCommandWithExec("C:\\dev\\projects\\validator-openstreetmap\\bashscript\\windows\\osm2pgsql-bin\\",
-                true);
+        String stylePath = new File(System.getProperty("user.dir")).getAbsolutePath() +
+                Const.OSM_COMMAND_WINDOWS_ROOT +
+                File.separator + Const.OSM_STYLE;
 
-        String content2 = "C:\\dev\\projects\\validator-openstreetmap\\bashscript\\windows\\osm2pgsql-bin\\osm2pgsql " +
-                "--create --database map-db --username postgres -S " +
-                "C:\\dev\\projects\\validator-openstreetmap\\target\\classes\\map\\default.style " +
-                "C:\\dev\\projects\\validator-openstreetmap\\target\\classes\\map\\bostonmap.osm & exit";
-        FileWriter fooWriter2 = new FileWriter(myFoo, false); // true to append
-        fooWriter2.write(content2);
-        fooWriter2.close();
+        List<String> listOfCommands = new ArrayList<>(30);
+        listOfCommands.add(command);
+        listOfCommands.add(Const.OSM_COMMAND_CREATE_OPTION);
+        listOfCommands.add(Const.OSM_COMMAND_DATABASE_OPTION);
+        listOfCommands.add(configurationService.getOSM_COMMAND_DATABASE_ARGUMENT());
+        listOfCommands.add(Const.OSM_COMMAND_USERNAME_OPTION);
+        listOfCommands.add(configurationService.getPSQL_USERNAME());
+        listOfCommands.add(Const.OSM_DEFAULT_STYLE_OPTION);
+        listOfCommands.add(stylePath);
+        listOfCommands.add(fileNameWithPath);
 
-        executeCommandWithExec("C:\\dev\\projects\\validator-openstreetmap\\bashscript\\windows\\osm2pgsql-bin\\",
-                true);
+        return listOfCommands;
     }
 
-
-    private static void executeCommandWithExec(String pathOfCommand, boolean isWin) {
+    private void executeCommandWithExec(List<String> commandList, boolean isWin) {
         Process p;
         try {
-            String[] cmd = new String[3];
             if (!isWin) {
-                cmd[0] = Const.SHELL_SH_COMMAND;
-                cmd[1] = pathOfCommand + Const.OSM_SH_FILE_PATH;
 
-                p = Runtime.getRuntime().exec(cmd);
+                ProcessBuilder pb = new ProcessBuilder();
+                pb.command(commandList);
+                p = pb.start();
+
             } else {
                 String command = Const.SHELL_BAT_COMMAND + Const.SPACE + Const.SHELL_BAT_NAME;
-
-                p = Runtime.getRuntime().exec(command, null, new File(pathOfCommand));
+                p = Runtime.getRuntime().exec(command, null, new File(commandList.get(0)));
 
             }
 
@@ -169,10 +138,8 @@ public class OsmToDBHandlerImpl implements OsmToDBHandler {
                 System.out.println(line);
             }
         } catch (IOException e) {
-            // TODO Auto-generated catch block
             e.printStackTrace();
         } catch (InterruptedException e) {
-            // TODO Auto-generated catch block
             e.printStackTrace();
         }
     }
